# taiko_test

./: CMakeLists.txt  PlatformPsp.cmake  PlatformRaylib.cmake  readme.md
res/: lagtrain.txt  map.txt
res/shader/: discard_transparent.fs
res_psp/maps/enthousiastic/: enthousiastic.txt
res_psp/maps/kyukurarin/: kyukurarin.txt
res_raylib/maps/hito/: sara_hito.txt
res_raylib/shader/: discard_transparent.vs
src/: Beatmap.cpp  BeatmapPlayer.cpp  BeatmapPlayer.h  Config.h  InputHandling.h  InputHandling_Multithread.cpp  InputHandling_Singlethread.cpp  InputThread.cpp  InputThread.h  Ruleset.cpp  Ruleset.h  TaikoRuleset.cpp  TaikoRuleset.h  Time.cpp  Time.h  Utils.cpp  Utils.h  main.cpp  main.h  main_Psp.cpp
src/Base/: Utils.cpp
src/Beatmap/: Beatmap.cpp  Beatmap.h
src/BeatmapPlayer/: BeatmapLoader.cpp  BeatmapLoader.h  BeatmapPlayer.cpp  BeatmapPlayer.h  BeatmapPlayerPsp.cpp  BeatmapPlayerPsp.h  BeatmapPlayerRaylib.cpp  BeatmapPlayerRaylib.h
src/Input/: InputHandling.h  InputHandling_Multithread.cpp  InputHandling_Psp.cpp  InputHandling_Singlethread.cpp
src/MapIndex/: MapIndexFile.cpp
src/OsuBeatmap/: OsuBeatmap.cpp  OsuBeatmap.h  OsuHitObject.h
src/Psp/: ConfigPsp.h  main_Psp.cpp
src/Raylib/: Config.h  UtilsRaylib.cpp  main.cpp  main.h
src/Ruleset/: Ruleset.cpp  Ruleset.h
src/SceneManagement/: Scene.h
src/TaikoBeatmap/: TaikoBeatmap.cpp  TaikoBeatmap.h  TaikoDrumRoll.cpp  TaikoDrumRoll.h  TaikoHit.h  TaikoTimingPoint.cpp  TaikoTimingPoint.h
src/TaikoRuleset/: TaikoRuleset.cpp  TaikoRulesetRaylib.cpp  TaikoRulesetRaylib.h
(+94 files in other folders)
